# rise-assignment-ner-finetune

./: .gitignore  .pre-commit-config.yaml  README.md  evaluation.ipynb  main.py  pyproject.toml  requirements.txt  train_example.ipynb
.github/: lint.yaml
notebook/: pre-processing.ipynb
src/: metrics.py  preprocess.py  tag.py  train.py
