[tool.poetry]
name = "rise-assignment-ner-finetune"
version = "0.1.0"
description = ""
authors = ["i-be-snek <sjzahra@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
transformers = "^4.35.2"
datasets = "^2.15.0"
seqeval = "^1.2.2"
tensorflow = {version = "2.14", extras = ["and-cuda"]}
evaluate = "^0.4.1"
huggingface-hub = "^0.19.4"
python-dotenv = "^1.0.0"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.1"
spacy = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
